# WarThunderDiscordRPC

./: .gitignore  .spec  README.md  WTDRP.spec  air_vehicle.yaml  autostart_service.py  custom_images.yaml  go.mod  go.sum  ground_vehicle.yaml  main.py  pyproject.toml  settings.yaml
.github/workflows/: build.yml
cmd/wt/: main.go
internal/configs/: logs.go  settings.go
internal/discord/: common.go
internal/discord/hanlder/: hanlder.go
internal/discord/init/: init.go
internal/discord/tools/: tools.go
internal/discord/types/: air.go  air_indicators.go  ground.go  indicators.go  info.go  map.go
internal/game/api/: requests.go
internal/tools/: collector.go  loger.go  prints.go
scripts/: README.md  builder.py  metrics.py  release.py  release_note.md
src/: const.py  logger.py  settings.py  tray.py
src/service/: api.py  autostart_service.py  builder.py  github.py  parser.py  presence.py  win_notify.py
src/shemas/: api.py  repos.py  settings.py
updater/: main.py
updater/schemas/: git.py
updater/service/: local.py  notify.py
